# mamba-exoplanet

./: .gitignore  BITACORA.md  README.md  pyproject.toml
data/splits/: manifest.csv  processed_manifest.csv  tics_labeled.csv  toi_summary.csv
notebooks/: 01_toi_eda.ipynb
scripts/: download_lightcurves.py  download_toi_catalog.py  get_data.py  preprocess_global.py  preprocess_lightcurves.py
src/exoplanet/: __init__.py
tests/: test_smoke.py
