[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet"
version = "0.1.0"
description = "Mamba Selective State Space Models for exoplanet detection in TESS light curves"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "José Fabián Zumbado Ruiz" },
    { name = "Jeremmy Aguilar Villanueva" },
]
keywords = [
    "exoplanets",
    "tess",
    "mamba",
    "state-space-models",
    "deep-learning",
    "astronomy",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Numérico / tabular
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",      # SMOTE para balanceo de clases (Fase 5+)
    # Astronomía
    "astropy>=6.0",
    "lightkurve>=2.4",
    "astroquery>=0.4",             # acceso a MAST y NASA Exoplanet Archive
    "pyvo>=1.5",                   # consultas TAP al TOI Catalog (Fase 1)
    # Deep learning (CPU/CUDA — instalar build CUDA aparte, ver README Paso 4)
    "torch>=2.2",
    "einops>=0.8",                 # operaciones de tensor reutilizadas en Mamba (Fase 8)
    "tensorboard>=2.16",           # logs de entrenamiento (Fase 6)
    # Visualización y utilidades
    "matplotlib>=3.8",
    "seaborn>=0.13",               # curvas ROC/PR y comparaciones (Fases 7/9/10)
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
